api_versioned_docs/version-12.1.2/avalonia/ios/avaloniaview.mdx
---
title: 'AvaloniaView'
hide_title: true
slug: '/avalonia/ios/avaloniaview'
uid: 'Avalonia.iOS.AvaloniaView'
commentId: 'T:Avalonia.iOS.AvaloniaView'
docset: 'avalonia-docs'
packageId: 'Avalonia.iOS'
assembly: 'Avalonia.iOS'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.iOS'
tfms:
  - 'net10.0-tvos26.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">AvaloniaView Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.iOS</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.iOS</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.iOS</code>
</div>
</div>

<div className="apiref-page__lead">

Root view container for Avalonia content, that can be embedded into iOS visual tree.

</div>

<div className="apiref-page__signature">

```csharp
public class AvaloniaView
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> UIView <span className="apiref-page__relation-separator">-&gt;</span> AvaloniaView
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Implements:</span> <a href="../input/textinput/itextinputmethodimpl">ITextInputMethodImpl</a>, INativeObject, IDisposable, IUIAccessibilityContainer
</div>
</div>

## Constructors

| Name | Description |
| --- | --- |
| [AvaloniaView](#uid-89ae804d76) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-89ae804d76"></span>

### AvaloniaView Constructor

```csharp
public AvaloniaView()
```

</section>

## Methods

| Name | Description |
| --- | --- |
| [AccessibilityElementCount](#uid-bf8258776b) | No summary available. |
| [BecomeFirstResponder](#uid-a7a180a483) | No summary available. |
| [GetAccessibilityElementAt](#uid-c33fbc2973) | No summary available. |
| [GetIndexOfAccessibilityElement](#uid-30c3b1f13f) | No summary available. |
| [InitWithController](#uid-87954b4c1f) | No summary available. |
| [LayerClass](#uid-ba18894f18) | No summary available. |
| [LayoutSubviews](#uid-335734b34b) | No summary available. |
| [PressesBegan](#uid-031bfb47b7) | No summary available. |
| [PressesCancelled](#uid-1b651a6c78) | No summary available. |
| [PressesChanged](#uid-a3d6edc4b1) | No summary available. |
| [PressesEnded](#uid-4241172d20) | No summary available. |
| [ResignFirstResponder](#uid-7fa6d80dd6) | No summary available. |
| [TintColorDidChange](#uid-f873250b06) | No summary available. |
| [TouchesBegan](#uid-a51a8037ef) | No summary available. |
| [TouchesCancelled](#uid-bf50261ba1) | No summary available. |
| [TouchesEnded](#uid-a78dc00726) | No summary available. |
| [TouchesMoved](#uid-793adf9321) | No summary available. |
| [TraitCollectionDidChange](#uid-7e9b099e33) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-bf8258776b"></span>

### AccessibilityElementCount Method

```csharp
public IntPtr AccessibilityElementCount()
```

#### Returns

IntPtr


</section>

<section className="apiref-page__member-entry">

<span id="uid-a7a180a483"></span>

### BecomeFirstResponder Method

```csharp
public bool BecomeFirstResponder()
```

#### Returns

bool


</section>

<section className="apiref-page__member-entry">

<span id="uid-c33fbc2973"></span>

### GetAccessibilityElementAt Method

```csharp
public Foundation.NSObject GetAccessibilityElementAt(IntPtr index)
```

#### Parameters

`index` IntPtr


#### Returns

Foundation.NSObject


</section>

<section className="apiref-page__member-entry">

<span id="uid-30c3b1f13f"></span>

### GetIndexOfAccessibilityElement Method

```csharp
public IntPtr GetIndexOfAccessibilityElement(Foundation.NSObject element)
```

#### Parameters

`element` Foundation.NSObject


#### Returns

IntPtr


</section>

<section className="apiref-page__member-entry">

<span id="uid-87954b4c1f"></span>

### InitWithController Method

```csharp
public void InitWithController<TController>(TController controller)
```

#### Parameters

`controller` TController


#### Type Parameters

`TController`


</section>

<section className="apiref-page__member-entry">

<span id="uid-ba18894f18"></span>

### LayerClass Method

```csharp
public ObjCRuntime.Class LayerClass()
```

#### Returns

ObjCRuntime.Class


</section>

<section className="apiref-page__member-entry">

<span id="uid-335734b34b"></span>

### LayoutSubviews Method

```csharp
public void LayoutSubviews()
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-031bfb47b7"></span>

### PressesBegan Method

```csharp
public void PressesBegan(Foundation.NSSet<UIKit.UIPress> presses, UIKit.UIPressesEvent evt)
```

#### Parameters

`presses` Foundation.NSSet&lt;UIKit.UIPress&gt;


`evt` UIKit.UIPressesEvent


</section>

<section className="apiref-page__member-entry">

<span id="uid-1b651a6c78"></span>

### PressesCancelled Method

```csharp
public void PressesCancelled(Foundation.NSSet<UIKit.UIPress> presses, UIKit.UIPressesEvent evt)
```

#### Parameters

`presses` Foundation.NSSet&lt;UIKit.UIPress&gt;


`evt` UIKit.UIPressesEvent


</section>

<section className="apiref-page__member-entry">

<span id="uid-a3d6edc4b1"></span>

### PressesChanged Method

```csharp
public void PressesChanged(Foundation.NSSet<UIKit.UIPress> presses, UIKit.UIPressesEvent evt)
```

#### Parameters

`presses` Foundation.NSSet&lt;UIKit.UIPress&gt;


`evt` UIKit.UIPressesEvent


</section>

<section className="apiref-page__member-entry">

<span id="uid-4241172d20"></span>

### PressesEnded Method

```csharp
public void PressesEnded(Foundation.NSSet<UIKit.UIPress> presses, UIKit.UIPressesEvent evt)
```

#### Parameters

`presses` Foundation.NSSet&lt;UIKit.UIPress&gt;


`evt` UIKit.UIPressesEvent


</section>

<section className="apiref-page__member-entry">

<span id="uid-7fa6d80dd6"></span>

### ResignFirstResponder Method

```csharp
public bool ResignFirstResponder()
```

#### Returns

bool


</section>

<section className="apiref-page__member-entry">

<span id="uid-f873250b06"></span>

### TintColorDidChange Method

```csharp
public void TintColorDidChange()
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a51a8037ef"></span>

### TouchesBegan Method

```csharp
public void TouchesBegan(Foundation.NSSet touches, UIKit.UIEvent evt)
```

#### Parameters

`touches` Foundation.NSSet


`evt` UIKit.UIEvent


</section>

<section className="apiref-page__member-entry">

<span id="uid-bf50261ba1"></span>

### TouchesCancelled Method

```csharp
public void TouchesCancelled(Foundation.NSSet touches, UIKit.UIEvent evt)
```

#### Parameters

`touches` Foundation.NSSet


`evt` UIKit.UIEvent


</section>

<section className="apiref-page__member-entry">

<span id="uid-a78dc00726"></span>

### TouchesEnded Method

```csharp
public void TouchesEnded(Foundation.NSSet touches, UIKit.UIEvent evt)
```

#### Parameters

`touches` Foundation.NSSet


`evt` UIKit.UIEvent


</section>

<section className="apiref-page__member-entry">

<span id="uid-793adf9321"></span>

### TouchesMoved Method

```csharp
public void TouchesMoved(Foundation.NSSet touches, UIKit.UIEvent evt)
```

#### Parameters

`touches` Foundation.NSSet


`evt` UIKit.UIEvent


</section>

<section className="apiref-page__member-entry">

<span id="uid-7e9b099e33"></span>

### TraitCollectionDidChange Method

```csharp
public void TraitCollectionDidChange(UIKit.UITraitCollection previousTraitCollection)
```

#### Parameters

`previousTraitCollection` UIKit.UITraitCollection


</section>

## Properties

| Name | Description |
| --- | --- |
| [AccessibilityContainerType](#uid-e28ebf4821) | No summary available. |
| [CanBecomeFirstResponder](#uid-accb5f5d37) | No summary available. |
| [CanResignFirstResponder](#uid-2092635d1b) | No summary available. |
| [Content](#uid-ca6a0fcf6b) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-e28ebf4821"></span>

### AccessibilityContainerType Property

```csharp
public UIKit.UIAccessibilityContainerType AccessibilityContainerType { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-accb5f5d37"></span>

### CanBecomeFirstResponder Property

```csharp
public bool CanBecomeFirstResponder { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-2092635d1b"></span>

### CanResignFirstResponder Property

```csharp
public bool CanResignFirstResponder { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-ca6a0fcf6b"></span>

### Content Property

```csharp
public Avalonia.Controls.Control Content { get; set; }
```

</section>

</ApiRefPage>

